# paper-tiger

./: .editorconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  config.h  guac.doxyfile  index.html  paper-tiger.doxyfile  params.json  theguac.kdev4  upgraded-guacamole
CMakeModules/: FindLibUV-Win32.cmake  FindPThread-Win32.cmake
bindata/: 1-3-1.wld  1353.wld  ServerLog.txt
contrib/protoplugin/: MyClass.cs  Program.cs  ProtoPlugin.cs  protoplugin.csproj  protoplugin.sln
contrib/protoplugin/Properties/: AssemblyInfo.cs
contrib/protoplugin/ProtoBuffers/: TileFlags.cs
doc/html/: annotated.html  binary__reader_8h_source.html  bitmap_8h_source.html  classes.html  client__uuid_8h_source.html  colour_8h_source.html  connect__request_8h_source.html  console_8h_source.html  continue__connecting_8h_source.html  dir_3e6eb7d65f353191f85aed8e914990fe.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a0aa96509b9647350e7a2e1f163f0331.html  files.html  functions.html  functions_vars.html  game_8h_source.html  getopt_8h_source.html  group__console.html  group__game.html  group__packet.html  group__paper-tiger.html  group__server.html  group__talloc.html  group__talloc__array.html  group__talloc__debug.html  group__talloc__ref.html  group__talloc__string.html  index.html  modules.html  packet_8h_source.html  packets_8h_source.html  param_8h_source.html  player_8h_source.html  player__hp_8h_source.html  player__info_8h_source.html  player__mana_8h_source.html  replace_8h_source.html  server_8h_source.html  structbinary__reader__context.html  structclient__uuid.html  (+28 more)
doc/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_10.js  variables_12.js  variables_2.js  variables_3.js  variables_6.js  (+4 more)
doc/latex/: annotated.tex  dir_3e6eb7d65f353191f85aed8e914990fe.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a0aa96509b9647350e7a2e1f163f0331.tex  group__console.tex  group__game.tex  group__packet.tex  group__paper-tiger.tex  group__server.tex  group__talloc.tex  group__talloc__array.tex  group__talloc__debug.tex  group__talloc__ref.tex  group__talloc__string.tex  modules.tex  refman.tex  structbinary__reader__context.tex  structclient__uuid.tex  structcolour.tex  structconnect__request.tex  structconsole.tex  structconsole__command.tex  structconsole__command__handler.tex  structgame.tex  structoption.tex  structpacket.tex  structpacket__handler.tex  structparam.tex  structplayer.tex  structplayer__hp.tex  structplayer__info.tex  structplayer__mana.tex  structserver.tex  structtalloc__chunk.tex  structtalloc__memlimit.tex  structtalloc__pool__hdr.tex  structtalloc__reference__handle.tex  structtile.tex  structtile__row.tex  structvector__2d.tex  (+2 more)
include/: binary_writer.h  bitmap.h  colour.h  config.h  console.h  game.h  game_properties.h  getopt.h  hook.h  item.h  packet.h  param.h  player.h  rect.h  server.h  tile.h  util.h  var.h  vector.h  vector_2d.h  world.h  world_section.h
include/packets/: chat_message.h  client_uuid.h  connect_request.h  connection_complete.h  continue_connecting.h  continue_connecting2.h  disconnect.h  get_section.h  inventory_slot.h  packets.h  player_hp.h  player_info.h  player_mana.h  section_tile_frame.h  status.h  tile_section.h  world_info.h
src/: .clang-format  .game.c.kate-swp  .indent.pro  .tile.c.un~  .tile.h.un~  .world.c.un~  .world.h.un~  binary_reader.c  binary_reader.h  binary_writer.c  binary_writer.h  bitmap.h  colour.h  command.c  command.h  config.h  console.c  console.h  dataloader.cc  dataloader.h  game.c  game.h  game_properties.c  getopt.c  getopt.h  hook.c  hook.h  item.h  main.c  main.cc  packet.c  packet.h  packet_type.h  param.cc  param.h  player.c  player.h  rect.h  server.c  server.h  (+15 more)
src/packets/: .player_info.h.kate-swp  chat_message.c  chat_message.h  client_uuid.c  client_uuid.h  connect_request.c  connect_request.h  connection_complete.c  connection_complete.h  continue_connecting.c  continue_connecting.h  continue_connecting2.c  continue_connecting2.h  disconnect.c  disconnect.h  get_section.c  get_section.h  inventory_slot.c  inventory_slot.h  player_hp.c  player_hp.h  player_info.c  player_info.h  player_mana.c  player_mana.h  section_tile_frame.c  section_tile_frame.h  status.c  status.h  tile_section.c  tile_section.h  world_info.c  world_info.h
src/proto/: tile_flags.proto
win32/include/: windows-mmap.h
win32/lib/x64/: libuv.exp  libuv.lib  linenoised.lib
win32/lib/x86/: libprotobuf-lite.exp  libprotobuf-lite.lib  libprotobuf.exp  libprotobuf.lib  libuv.exp  libuv.lib  zlibd.idb  zlibd.lib
